Fixed banner text hiding behind the gradient.

--- a/components/Header.css
+++ b/components/Header.css
@@ -18,21 +18,23 @@ header {
     z-index: -5;
 }
 
-#banner_left {
-    width: 50%;
-    height: 100%;
-    margin: 0;
+#banner_text_div {
+    position: absolute;
+    width: 100%;
+    height: 225px;
+    top: 50px;
     box-sizing: border-box;
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    z-index: 4;
 }
 
-#banner_left img {
+#banner_text_half img {
     height: 35px;
 }
 
-#banner_left h1 {
+#banner_text_half h1 {
     margin: 0;
     position: relative;
     color: white;
@@ -40,7 +42,7 @@ header {
     font-size: 25;
 }
 
-#banner_right{
+#banner_text_half{
     width: 50%;
     height: 100%;
     box-sizing: border-box;
@@ -50,7 +52,7 @@ header {
     justify-content: center;
 }
 
-#banner_right div h2{
+#banner_text_half div h2{
     display: inline;
     margin: 0;
     position: relative;
@@ -59,9 +61,9 @@ header {
 }
 
 
-#banner_right #banner_logo {
+#banner_text_half #banner_logo {
     display: inline-block;
-    height: 20px;
+    height: 26px;
 }
 
 #banner_gradient{
